# waifu-tagger

./: .gitignore  Cargo.toml  tagger.py
src/: main.rs
