[package]
name = "waifu-tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
tract-onnx = "0.21.9"
anyhow = "1.0"
image = "0.24"
ndarray = "0.15"
csv = "1.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
